* Tue Feb 04 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.2.1-0
- Update for EL8.
- CVE-2019-14287 mitigation. See
  https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-14287
  for more information
- Do not allow the use of userid or group id of -1 when ALL or %ALL are
  used in the runas section of a sudo user specification and the version of
  sudo is earlier than 1.8.28.

* Wed Sep 25 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.2.1-0
- Deep merge user_specifications by default
- Add support for simp/simplib < 7

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 5.2.1-0
- Support puppetlabs/concat 6.x.

* Wed Jun 12 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.2.0-0
- Allow additional options in sudo::user_specification
- Add Puppet 6 support
- Remove Puppet 4 support
- Allow puppetlabs/stdlib < 7

* Mon Mar 04 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 5.1.2-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Updated URLs in the README.md

* Thu Nov 15 2018 Martin Merfort <martin.merfort@sixt.com> - 5.1.1-0
- Enable support for cmnd def_type

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 5.1.0-0
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 5.1.0-0
- Added support for Puppet 5 and OEL
- Modified uspec template to handle the RedHat OS family instead of just RHEL
  or CentOS

* Fri Aug 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.1.0-0
- Replaced all references to 'sudosh' with 'su' to reduce future confusion as
  we move away from using sudosh.

* Fri Aug 17 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.0.6-0
- Added minimum size for sudo::user_specification::hostlist, because an
  empty list is not permitted.

* Wed Jun 20 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.5-0