@@ -1,3 +1,6 @@
+* Tue Jun 09 2020 Steven Pritchard <steven.pritchard@onyxpoint.com> - 5.3.0-0
+- Add parameters for sudo::default_entry and sudo::alias defined types
+
 * Tue Feb 04 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 5.2.1-0
 - Update for EL8.
 - CVE-2019-14287 mitigation. See
